appId: com.studycenter.sc_student
---
- launchApp:
    clearState: true
- assertVisible:
    text: Masuk
- tapOn: "email@contoh.com / username"
- inputText: test_college@studycenter.test
- tapOn: "Masukkan password"
- inputText: Test12345
- hideKeyboard
- tapOn: "Login Sekarang"
- waitForAnimationToEnd: 3000
- assertVisible:
    text: Test College
